--- a/HubForSignalRService/SignalRDataShare/local.settings.json
+++ b/HubForSignalRService/SignalRDataShare/local.settings.json
@@ -4,5 +4,8 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "AzureSignalRConnectionString": ""
+  },
+  "Host": {
+    "CORS": "*"
   }
 }
