--- a/SendMessageFromEventHubToSignarlRService/ReceiveEHMtoSendSR/local.settings.json
+++ b/SendMessageFromEventHubToSignarlRService/ReceiveEHMtoSendSR/local.settings.json
@@ -3,7 +3,10 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
-    "EventHubConnectionString": "",
-    "SignalRConnectionString": ""
+    "AzureEventHubConnectionString": "",
+    "AzureSignalRConnectionString": ""
+  },
+  "Host": {
+    "LocalHttpPort":  7072
   }
 }
