Function Appの名前を変更

--- a/src/ReceiveEventHubToSignalRService/Properties/launchSettings.json
+++ b/src/ReceiveEventHubToSignalRService/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "ReceiveEHMtoSendSR": {
+    "ReceiveEventHubToSignalRService": {
       "commandName": "Project",
       "commandLineArgs": "host start --pause-on-error"
     }
